feat: 增加air热重载
