# docs/swagger.yaml
@@ -27,6 +27,17 @@ definitions:
       message:
         type: string
     type: object
+  controller.Response-array_model_Menu:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/model.Menu'
+        type: array
+      message:
+        type: string
+    type: object
   controller.Response-controller_LoginResponse:
     properties:
       code:
@@ -442,9 +453,7 @@ paths:
         "200":
           description: 用户权限菜单树
           schema:
-            items:
-              $ref: '#/definitions/model.Menu'
-            type: array
+            $ref: '#/definitions/controller.Response-array_model_Menu'
       security:
       - BearerAuth: []
       summary: 获取用户权限菜单树
